Cleans up namespaces, licenses

--- a/AsyncRx.NET/Tests.System.Reactive.Async.Concurrency/Tests.System.Reactive.Async.Concurrency.csproj
+++ b/AsyncRx.NET/Tests.System.Reactive.Async.Concurrency/Tests.System.Reactive.Async.Concurrency.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <RootNamespace>ReactiveTests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
