--- a/AsyncRx.NET/Microsoft.Reactive.Async.Testing/Microsoft.Reactive.Async.Testing.csproj
+++ b/AsyncRx.NET/Microsoft.Reactive.Async.Testing/Microsoft.Reactive.Async.Testing.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RootNamespace>Microsoft.Reactive.Testing</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
