--- a/AsyncRx.NET/Tests.System.Reactive.Async/Tests.System.Reactive.Async.Linq.csproj
+++ b/AsyncRx.NET/Tests.System.Reactive.Async/Tests.System.Reactive.Async.Linq.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <RootNamespace>ReactiveTests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
