--- a/AsyncRx.NET/tests/Tests.props
+++ b/AsyncRx.NET/tests/Tests.props
@@ -1,10 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project>
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-
     <IsPackable>false</IsPackable>
-
     <RootNamespace>ReactiveTests</RootNamespace>
   </PropertyGroup>
 
@@ -12,10 +10,6 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Microsoft.Reactive.Async.Testing\Microsoft.Reactive.Async.Testing.csproj" />
   </ItemGroup>
 
 </Project>
