--- a/AsyncRx.NET/tests/Tests.System.Reactive.Async.Disposables/Tests.System.Reactive.Async.Disposables.csproj
+++ b/AsyncRx.NET/tests/Tests.System.Reactive.Async.Disposables/Tests.System.Reactive.Async.Disposables.csproj
@@ -1,8 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <Import Project="..\Tests.props"/>
+  <Import Project="..\Tests.props" />
   <PropertyGroup>
     <TargetFramework>$(TargetFramework)</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\System.Reactive.Async.Disposables\System.Reactive.Async.Disposables.csproj" />
+  </ItemGroup>
 
 </Project>
