--- a/azure-pipelines.ix.yml
+++ b/azure-pipelines.ix.yml
@@ -46,6 +46,8 @@ steps:
 - task: DotNetCoreCLI@2
   inputs:
     command: restore
+    selectOrConfig: config
+    nugetConfigPath: Ix.NET/Source/NuGet.config
     projects: Ix.NET/Source/**/*.csproj
   displayName: Restore
 
