--- a/azure-pipelines.ix.yml
+++ b/azure-pipelines.ix.yml
@@ -77,7 +77,11 @@ steps:
 - script: reportgenerator -reports:$(Agent.TempDirectory)/**/coverage.cobertura.xml -targetdir:$(Build.SourcesDirectory)/Ix.NET/Source/coverlet/reports -reporttypes:"Cobertura"
   displayName: Create reports
 
-
+- task: PublishCodeCoverageResults@1
+  displayName: 'Publish code coverage'
+  inputs:
+    codeCoverageTool: Cobertura
+    summaryFileLocation: $(Build.SourcesDirectory)/Ix.NET/Source/coverlet/reports/Cobertura.xml
 
 - task: DotNetCoreCLI@2
   inputs:
