Update approved to include operators

--- a/Rx.NET/Source/tests/Tests.System.Reactive.ApiApprovals/Tests.System.Reactive.ApiApprovals.csproj
+++ b/Rx.NET/Source/tests/Tests.System.Reactive.ApiApprovals/Tests.System.Reactive.ApiApprovals.csproj
@@ -9,17 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Api\ApiApprovalTests.Aliases.approved.cs" />
-    <Compile Remove="Api\ApiApprovalTests.Core.approved.cs" />
-    <Compile Remove="Api\ApiApprovalTests.Testing.approved.cs" />
-    
-    <None Include="Api\ApiApprovalTests.Aliases.approved.cs" />
-    <None Include="Api\ApiApprovalTests.Core.approved.cs" />
-    <None Include="Api\ApiApprovalTests.Testing.approved.cs" />
-    
-    <None Include="Api\ApiApprovalTests.Aliases.approved.cs" />
-    <None Include="Api\ApiApprovalTests.Core.approved.cs" />
-    <None Include="Api\ApiApprovalTests.Testing.approved.cs" />
+    <Compile Remove="Api\*.approved.cs" />    
+    <None Include="Api\*.approved.cs" />
   </ItemGroup>
 
   <ItemGroup>
