Update sort order

--- a/Rx.NET/Source/tests/Tests.System.Reactive.ApiApprovals/Tests.System.Reactive.ApiApprovals.csproj
+++ b/Rx.NET/Source/tests/Tests.System.Reactive.ApiApprovals/Tests.System.Reactive.ApiApprovals.csproj
@@ -10,7 +10,9 @@
 
   <ItemGroup>
     <Compile Remove="Api\*.approved.cs" />    
+    <Compile Remove="Api\*.received.cs" />    
     <None Include="Api\*.approved.cs" />
+    <None Include="Api\*.received.cs" />
   </ItemGroup>
 
   <ItemGroup>
