Add multi level lookup on Windows to ensure 2.1 runtime is found

--- a/azure-pipelines.ix.yml
+++ b/azure-pipelines.ix.yml
@@ -33,6 +33,7 @@ steps:
   inputs:
     version: 3.0.x
     includePreviewVersions: true
+    performMultiLevelLookup: true
 
 - task: DotNetCoreCLI@2
   inputs:
