--- a/azure-pipelines.rx.yml
+++ b/azure-pipelines.rx.yml
@@ -190,7 +190,7 @@ stages:
   - job: Integration_WindowsDesktop_Tests
     dependsOn: Build
     pool:
-      vmImage: windows-latest
+      vmImage: windows-2019
 
     variables:
       BuildConfiguration: Release
