--- a/azure-pipelines.rx.yml
+++ b/azure-pipelines.rx.yml
@@ -20,235 +20,256 @@ pr:
       - .editorconfig
       - azure-pipelines.rx.yml
 
-jobs:
-- job: Build
-  pool:
-    vmImage: windows-2019
+stages:
+- stage: Build
+  jobs:
+  - job: Build
+    pool:
+      vmImage: windows-2019
 
-  variables:
-    BuildConfiguration: Release
-    BuildPlatform: Any CPU
-    DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
+    variables:
+      BuildConfiguration: Release
+      BuildPlatform: Any CPU
+      DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
 
-  steps:
-  - task: UseDotNet@2
-    inputs:
-      version: '3.0.x'
-      includePreviewVersions: true
-      performMultiLevelLookup: true
+    steps:
+    - task: UseDotNet@2
+      inputs:
+        version: '3.0.x'
+        performMultiLevelLookup: true
 
-  - task: DotNetCoreCLI@2
-    inputs:
-      command: custom
-      custom: tool
-      arguments: install --tool-path . nbgv
-    displayName: Install NBGV tool
+    - task: DotNetCoreCLI@2
+      inputs:
+        command: custom
+        custom: tool
+        arguments: install --tool-path . nbgv
+      displayName: Install NBGV tool
 
-  - script: nbgv cloud -a -p Rx.NET/Source
-    displayName: Set Version
+    - script: nbgv cloud -a -p Rx.NET/Source
+      displayName: Set Version
 
-  - task: MSBuild@1
-    displayName: Build System.Reactive.sln
-    inputs:
-      solution: Rx.NET/Source/System.Reactive.sln
-      msbuildArguments: /restore /t:build /p:CreatePackage=true /p:NoPackageAnalysis=true /p:PackageOutputPath=$(Build.ArtifactStagingDirectory)\artifacts
-      configuration: $(BuildConfiguration)
-      maximumCpuCount: true
+    - task: MSBuild@1
+      displayName: Build System.Reactive.sln
+      inputs:
+        solution: Rx.NET/Source/System.Reactive.sln
+        msbuildArguments: /restore /t:build /p:CreatePackage=true /p:NoPackageAnalysis=true /p:PackageOutputPath=$(Build.ArtifactStagingDirectory)\artifacts
+        configuration: $(BuildConfiguration)
+        maximumCpuCount: true
 
-  - task: NuGetCommand@2
-    displayName: Pack compatibility package
-    inputs:
-      command: custom
-      arguments: pack Rx.NET/Source/facades/System.Reactive.Compatibility.nuspec -Version $(NBGV_NuGetPackageVersion) -MinClientVersion 2.12 -NoPackageAnalysis -outputdirectory $(Build.ArtifactStagingDirectory)\artifacts
+    - task: NuGetCommand@2
+      displayName: Pack compatibility package
+      inputs:
+        command: custom
+        arguments: pack Rx.NET/Source/facades/System.Reactive.Compatibility.nuspec -Version $(NBGV_NuGetPackageVersion) -MinClientVersion 2.12 -NoPackageAnalysis -outputdirectory $(Build.ArtifactStagingDirectory)\artifacts
 
-  - task: DotNetCoreCLI@2
-    inputs:
-      command: custom
-      custom: tool
-      arguments: install --tool-path . dotnet-reportgenerator-globaltool
-    displayName: Install ReportGenerator tool
+    - task: DotNetCoreCLI@2
+      inputs:
+        command: custom
+        custom: tool
+        arguments: install --tool-path . dotnet-reportgenerator-globaltool
+      displayName: Install ReportGenerator tool
 
-  - task: DotNetCoreCLI@2
-    inputs:
-      command: test
-      projects: Rx.NET/Source/tests/Tests.System.Reactive/*.csproj
-      arguments: -c $(BuildConfiguration) --no-build --no-restore --filter "SkipCI!=true" --settings Rx.NET/Source/CodeCoverage.runsettings --collect:"XPlat Code Coverage" -- RunConfiguration.DisableAppDomain=true
-    displayName: Run Unit Tests
+    - task: DotNetCoreCLI@2
+      inputs:
+        command: test
+        projects: Rx.NET/Source/tests/Tests.System.Reactive/*.csproj
+        arguments: -c $(BuildConfiguration) --no-build --no-restore --filter "SkipCI!=true" --settings Rx.NET/Source/CodeCoverage.runsettings --collect:"XPlat Code Coverage" -- RunConfiguration.DisableAppDomain=true
+      displayName: Run Unit Tests
 
-  - task: DotNetCoreCLI@2
-    inputs:
-      command: test
-      projects: Rx.NET/Source/tests/Tests.System.Reactive.ApiApprovals/Tests.System.Reactive.ApiApprovals.csproj
-      arguments: -c $(BuildConfiguration) --no-build --no-restore
-    displayName: Run Api Approvals Tests
+    - task: DotNetCoreCLI@2
+      inputs:
+        command: test
+        projects: Rx.NET/Source/tests/Tests.System.Reactive.ApiApprovals/Tests.System.Reactive.ApiApprovals.csproj
+        arguments: -c $(BuildConfiguration) --no-build --no-restore
+      displayName: Run Api Approvals Tests
 
-  - script: reportgenerator -reports:$(Agent.TempDirectory)/**/coverage.cobertura.xml -targetdir:$(Build.SourcesDirectory)/Rx.NET/Source/coverlet/reports -reporttypes:"Cobertura"
-    displayName: Create reports
+    - script: reportgenerator -reports:$(Agent.TempDirectory)/**/coverage.cobertura.xml -targetdir:$(Build.SourcesDirectory)/Rx.NET/Source/coverlet/reports -reporttypes:"Cobertura"
+      displayName: Create reports
 
-  - task: PublishCodeCoverageResults@1
-    displayName: 'Publish code coverage'
-    inputs:
-      codeCoverageTool: Cobertura
-      summaryFileLocation: $(Build.SourcesDirectory)/Rx.NET/Source/coverlet/reports/Cobertura.xml
+    - task: PublishCodeCoverageResults@1
+      displayName: 'Publish code coverage'
+      inputs:
+        codeCoverageTool: Cobertura
+        summaryFileLocation: $(Build.SourcesDirectory)/Rx.NET/Source/coverlet/reports/Cobertura.xml
 
-  - task: PowerShell@2
-    displayName: Authenticode Sign Packages
-    inputs:
-      filePath: Rx.NET/Source/build/Sign-Package.ps1
-    env:
-      SignClientUser: $(SignClientUser)
-      SignClientSecret: $(SignClientSecret)
-      ArtifactDirectory: $(Build.ArtifactStagingDirectory)\artifacts
-    condition: and(succeeded(), not(eq(variables['build.reason'], 'PullRequest')), not(eq(variables['SignClientSecret'], '')), not(eq(variables['SignClientUser'], '')))
+    - publish:  Rx.NET/Source/build
+      artifact: config
+      displayName: Publish signing config
 
-  - task: PublishBuildArtifacts@1
-    inputs:
-      PathtoPublish: $(Build.ArtifactStagingDirectory)\artifacts
-      ArtifactName: artifacts
-      publishLocation: Container
-    condition: always()
+    - publish: $(Build.ArtifactStagingDirectory)\artifacts
+      displayName: Publish artifacts
+      artifact: BuildPackages
 
-- job: Integration_Linux_Tests
-  dependsOn: Build
-  pool:
-    vmImage: ubuntu-16.04
+  - job: Integration_Linux_Tests
+    dependsOn: Build
+    pool:
+      vmImage: ubuntu-16.04
 
-  variables:
-    BuildConfiguration: Release
-    BuildPlatform: Any CPU
-    DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
+    variables:
+      BuildConfiguration: Release
+      BuildPlatform: Any CPU
+      DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
 
-  steps:
-  - task: UseDotNet@2
-    inputs:
-      version: '3.0.x'
-      includePreviewVersions: true
+    steps:
+    - task: UseDotNet@2
+      inputs:
+        version: '3.0.x'
 
-  - task: UseDotNet@2
-    inputs:
-      version: '2.2.x'
-      packageType: runtime
+    - task: UseDotNet@2
+      inputs:
+        version: '2.2.x'
+        packageType: runtime
 
-  - task: DotNetCoreCLI@2
-    inputs:
-      command: custom
-      custom: tool
-      arguments: install --tool-path . nbgv
-    displayName: Install NBGV tool
+    - task: DotNetCoreCLI@2
+      inputs:
+        command: custom
+        custom: tool
+        arguments: install --tool-path . nbgv
+      displayName: Install NBGV tool
 
-  - script: ./nbgv cloud -a -p Rx.NET/Source
-    displayName: Set Version
+    - script: ./nbgv cloud -a -p Rx.NET/Source
+      displayName: Set Version
 
-  - task: DownloadBuildArtifacts@0
-    displayName: 'Download Build Artifacts'
-    inputs:
-      artifactName: artifacts
-      downloadPath: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages
+    - task: DownloadPipelineArtifact@2
+      displayName: Download Build Artifacts
+      inputs:
+        artifactName: BuildPackages
+        targetPath: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages
 
-  - script: mv $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages/artifacts/*.* $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages
-    displayName: Move packages to LocalPackages directory
+    - task: DotNetCoreCLI@2
+      displayName: Update Rx
+      inputs:
+        command: custom
+        projects: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LinuxTests/LinuxTests.csproj
+        custom: add
+        arguments: package System.Reactive -v $(NBGV_NuGetPackageVersion) -s $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages
 
-  - task: DotNetCoreCLI@2
-    displayName: Update Rx
-    inputs:
-      command: custom
-      projects: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LinuxTests/LinuxTests.csproj
-      custom: add
-      arguments: package System.Reactive -v $(NBGV_NuGetPackageVersion) -s $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages
+    - task: DotNetCoreCLI@2
+      displayName: Update Aliases
+      inputs:
+        command: custom
+        projects: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LinuxTests/LinuxTests.csproj
+        custom: add
+        arguments: package System.Reactive.Observable.Aliases -v $(NBGV_NuGetPackageVersion) -s $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages
 
-  - task: DotNetCoreCLI@2
-    displayName: Update Aliases
-    inputs:
-      command: custom
-      projects: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LinuxTests/LinuxTests.csproj
-      custom: add
-      arguments: package System.Reactive.Observable.Aliases -v $(NBGV_NuGetPackageVersion) -s $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages
+    - task: DotNetCoreCLI@2
+      displayName: Update Testing
+      inputs:
+        command: custom
+        projects: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LinuxTests/LinuxTests.csproj
+        custom: add
+        arguments: package Microsoft.Reactive.Testing -v $(NBGV_NuGetPackageVersion) -s $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages
 
-  - task: DotNetCoreCLI@2
-    displayName: Update Testing
-    inputs:
-      command: custom
-      projects: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LinuxTests/LinuxTests.csproj
-      custom: add
-      arguments: package Microsoft.Reactive.Testing -v $(NBGV_NuGetPackageVersion) -s $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages
+    - task: DotNetCoreCLI@2
+      inputs:
+        command: test
+        projects: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LinuxTests/LinuxTests.csproj
+        arguments: -c $(BuildConfiguration) -f netcoreapp3.0
+      displayName: Run 3.0 Tests on Linux
 
-  - task: DotNetCoreCLI@2
-    inputs:
-      command: test
-      projects: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LinuxTests/LinuxTests.csproj
-      arguments: -c $(BuildConfiguration) -f netcoreapp3.0
-    displayName: Run 3.0 Tests on Linux
+    - task: DotNetCoreCLI@2
+      inputs:
+        command: test
+        projects: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LinuxTests/LinuxTests.csproj
+        arguments: -c $(BuildConfiguration) -f netcoreapp2.1 /p:TargetFrameworks=netcoreapp2.1
+      displayName: Run 2.1 Tests on Linux
 
-  - task: DotNetCoreCLI@2
-    inputs:
-      command: test
-      projects: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LinuxTests/LinuxTests.csproj
-      arguments: -c $(BuildConfiguration) -f netcoreapp2.1 /p:TargetFrameworks=netcoreapp2.1
-    displayName: Run 2.1 Tests on Linux
+  - job: Integration_WindowsDesktop_Tests
+    dependsOn: Build
+    pool:
+      vmImage: windows-2019
 
-- job: Integration_WindowsDesktop_Tests
-  dependsOn: Build
-  pool:
-    vmImage: windows-2019
+    variables:
+      BuildConfiguration: Release
+      BuildPlatform: Any CPU
+      DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
 
-  variables:
-    BuildConfiguration: Release
-    BuildPlatform: Any CPU
-    DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
+    steps:
+    - task: UseDotNet@2
+      inputs:
+        version: '3.0.x'
+        performMultiLevelLookup: true
 
-  steps:
-  - task: UseDotNet@2
-    inputs:
-      version: '3.0.x'
-      includePreviewVersions: true
-      performMultiLevelLookup: true
+    - task: DotNetCoreCLI@2
+      inputs:
+        command: custom
+        custom: tool
+        arguments: install --tool-path . nbgv
+      displayName: Install NBGV tool
 
-  - task: DotNetCoreCLI@2
-    inputs:
-      command: custom
-      custom: tool
-      arguments: install --tool-path . nbgv
-    displayName: Install NBGV tool
+    - script: nbgv cloud -a -p Rx.NET/Source
+      displayName: Set Version
 
-  - script: nbgv cloud -a -p Rx.NET/Source
-    displayName: Set Version
+    - task: DownloadPipelineArtifact@2
+      displayName: Download Build Artifacts
+      inputs:
+        artifactName: BuildPackages
+        targetPath: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages
 
-  - task: DownloadBuildArtifacts@0
-    displayName: 'Download Build Artifacts'
-    inputs:
-      artifactName: artifacts
-      downloadPath: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages
+    - task: DotNetCoreCLI@2
+      displayName: Update Rx
+      inputs:
+        command: custom
+        projects: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/WindowsDesktopTests/WindowsDesktopTests.csproj
+        custom: add
+        arguments: package System.Reactive -v $(NBGV_NuGetPackageVersion) -s $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages
 
-  - powershell: mv $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages/artifacts/*.* $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages
-    displayName: Move packages to LocalPackages directory
+    - task: DotNetCoreCLI@2
+      displayName: Update Aliases
+      inputs:
+        command: custom
+        projects: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/WindowsDesktopTests/WindowsDesktopTests.csproj
+        custom: add
+        arguments: package System.Reactive.Observable.Aliases -v $(NBGV_NuGetPackageVersion) -s $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages
 
-  - task: DotNetCoreCLI@2
-    displayName: Update Rx
-    inputs:
-      command: custom
-      projects: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/WindowsDesktopTests/WindowsDesktopTests.csproj
-      custom: add
-      arguments: package System.Reactive -v $(NBGV_NuGetPackageVersion) -s $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages
+    - task: DotNetCoreCLI@2
+      displayName: Update Testing
+      inputs:
+        command: custom
+        projects: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/WindowsDesktopTests/WindowsDesktopTests.csproj
+        custom: add
+        arguments: package Microsoft.Reactive.Testing -v $(NBGV_NuGetPackageVersion) -s $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages
 
-  - task: DotNetCoreCLI@2
-    displayName: Update Aliases
-    inputs:
-      command: custom
-      projects: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/WindowsDesktopTests/WindowsDesktopTests.csproj
-      custom: add
-      arguments: package System.Reactive.Observable.Aliases -v $(NBGV_NuGetPackageVersion) -s $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages
+    - task: DotNetCoreCLI@2
+      inputs:
+        command: test
+        projects: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/WindowsDesktopTests/WindowsDesktopTests.csproj
+        arguments: -c $(BuildConfiguration)
+      displayName: Run 3.0 Tests on WindowDesktop
 
-  - task: DotNetCoreCLI@2
-    displayName: Update Testing
-    inputs:
-      command: custom
-      projects: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/WindowsDesktopTests/WindowsDesktopTests.csproj
-      custom: add
-      arguments: package Microsoft.Reactive.Testing -v $(NBGV_NuGetPackageVersion) -s $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages
+- stage: CodeSign
+  condition: and(succeeded('Build'), not(eq(variables['build.reason'], 'PullRequest')))
+  jobs:
+  - deployment: CodeSign
+    displayName: Code Signing
+    pool:
+      vmImage: windows-latest
+    environment: Code Sign
+    variables:
+    - group: SignClient Credentials
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - task: DotNetCoreCLI@2
+            inputs:
+              command: custom
+              custom: tool
+              arguments: install --tool-path . SignClient
+            displayName: Install SignTool tool
 
-  - task: DotNetCoreCLI@2
-    inputs:
-      command: test
-      projects: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/WindowsDesktopTests/WindowsDesktopTests.csproj
-      arguments: -c $(BuildConfiguration)
-    displayName: Run 3.0 Tests on WindowDesktop
+          - pwsh: |
+              .\SignClient "Sign" `
+              --baseDirectory "$(Pipeline.Workspace)\BuildPackages" `
+              --input "**/*.nupkg" `
+              --config "$(Pipeline.Workspace)\config\signclient.json" `
+              --user "$(SignClientUser)" `
+              --secret "$(SignClientSecret)" `
+              --name "Rx.NET" `
+              --description "Rx.NET" `
+              --descriptionUrl "https://github.com/dotnet/reactive"
+            displayName: Sign packages
+
+          - publish: $(Pipeline.Workspace)/BuildPackages
+            displayName: Publish Signed Packages
+            artifact: SignedPackages
