Disable parallelism to work around Sdk Resolver race condition

--- a/azure-pipelines.rx.yml
+++ b/azure-pipelines.rx.yml
@@ -54,7 +54,7 @@ stages:
         solution: Rx.NET/Source/System.Reactive.sln
         msbuildArguments: /restore /t:build /p:CreatePackage=true /p:NoPackageAnalysis=true /p:PackageOutputPath=$(Build.ArtifactStagingDirectory)\artifacts
         configuration: $(BuildConfiguration)
-        maximumCpuCount: true
+        maximumCpuCount: false
 
     - task: NuGetCommand@2
       displayName: Pack compatibility package
