use 3.1.300-preview to fix embedded pdb

--- a/azure-pipelines.rx.yml
+++ b/azure-pipelines.rx.yml
@@ -37,6 +37,7 @@ stages:
       inputs:
         version: '3.1.x'
         performMultiLevelLookup: true
+        includePreviewVersions: true
 
     - task: DotNetCoreCLI@2
       inputs:
