use 3.1.3xx sdk with fixes for untracked sources

--- a/azure-pipelines.ix.yml
+++ b/azure-pipelines.ix.yml
@@ -32,11 +32,11 @@ stages:
   jobs:
   - job: Build
     steps:
-    - task: UseDotNet@2
-      displayName: 'Use .NET Core SDK 3.x'
+    - task: DotNetCoreInstaller@0
       inputs:
-        version: 3.1.x
+        version: '3.1.300-preview-015048'
         performMultiLevelLookup: true
+        includePreviewVersions: true
 
     - task: DotNetCoreCLI@2
       inputs:
